Added ignore = dirty for git submodules
http://qiita.com/garaemon/items/f5093aabf3ed35fdaf1c

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "Vendor/SwiftState"]
 	path = Vendor/SwiftState
 	url = git@github.com:ReactKit/SwiftState.git
+	ignore = dirty
 [submodule "Vendor/SwiftTask"]
 	path = Vendor/SwiftTask
 	url = git@github.com:ReactKit/SwiftTask.git
+	ignore = dirty
+
